--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "3d-model-test",
-  "version": "0.1.0",
+  "name": "vedanta",
+  "version": "2.0",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
