--- a/App/.env
+++ b/App/.env
@@ -1,3 +1,5 @@
-REACT_APP_SERVER_URL=http://localhost:4000/
+# REACT_APP_SERVER_URL=http://localhost:4000/
+REACT_APP_SERVER_URL=http://15.207.173.73:4000/
 REACT_APP_URL=http://localhost:3000
+# REACT_APP_URL=http://15.207.173.73:3000
 REACT_APP_WEBSOCKET_URL=http://15.207.173.73:5001
