--- a/App/package.json
+++ b/App/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
