--- a/App/package.json
+++ b/App/package.json
@@ -23,7 +23,8 @@
     "socket.io-client": "^4.8.1",
     "swr": "^2.3.0",
     "three": "^0.169.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
