added dynamic env for backend

--- a/App/.env
+++ b/App/.env
@@ -1,5 +1,7 @@
 # REACT_APP_SERVER_URL=http://localhost:4000/
-REACT_APP_SERVER_URL=http://15.207.173.73:4000/
+# REACT_APP_SERVER_URL=http://15.207.173.73:4000/
+REACT_APP_SERVER_URL=http://34.100.168.176:4000/
 REACT_APP_URL=http://localhost:3000
 # REACT_APP_URL=http://15.207.173.73:3000
-REACT_APP_WEBSOCKET_URL=http://15.207.173.73:5001
+# REACT_APP_WEBSOCKET_URL=http://15.207.173.73:5001
+REACT_APP_WEBSOCKET_URL=http://34.100.168.176:5001
