--- a/App/.env
+++ b/App/.env
@@ -5,3 +5,4 @@ REACT_APP_URL=http://localhost:3000
 # REACT_APP_URL=http://15.207.173.73:3000
 # REACT_APP_WEBSOCKET_URL=http://15.207.173.73:5001
 REACT_APP_WEBSOCKET_URL=http://34.100.168.176:5001
+REACT_APP_SIGNUP_SECRET_KEY=c3Jpbml2YXNhbi1kYXJrbmVidWxhLS0wMDAw
