--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
+    "rate-limiter-flexible": "^5.0.5",
     "redis": "^4.7.0",
     "redis-commander": "^0.8.0",
     "socket.io": "^4.8.1",
@@ -21,7 +22,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
