--- a/App/package.json
+++ b/App/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-plugin-annotation": "^3.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
