--- a/App/package.json
+++ b/App/package.json
@@ -52,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.14"
   }
 }
