--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
     "swr": "^2.3.0",
     "three": "^0.169.0",
     "web-vitals": "^2.1.4",
