--- a/App/package.json
+++ b/App/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.9",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,7 +14,10 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-plugin-annotation": "^3.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
@@ -24,6 +29,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "swr": "^2.3.0",
+    "tailwind-merge": "^3.1.0",
     "three": "^0.169.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
