--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,6 @@
+EMAIL_USER=immortalshooters@gmail.com
+EMAIL_PASS=l7yA7@B^$40c
+
 PORT=4000
 MONGODB_URI=mongodb://127.0.0.1:27017/vedanta
 dbName=vedanta
