--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,5 @@
 EMAIL_USER=immortalshooters@gmail.com
-EMAIL_PASS=l7yA7@B^$40c
+EMAIL_PASS=snjvfgnhjjaejfkt
 
 PORT=4000
 MONGODB_URI=mongodb://127.0.0.1:27017/vedanta
